<resources>
    <string name="app_name" id="app_name">CogniChamp</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="youtubeDeveloperKey">AIzaSyBAE7yzU6RoewDkfWmU6TzRABznj4-_zEM	</string>
    <string name="facebook_app_id">591280704375929</string>
    <string name="fb_login_protocol_scheme">fb591280704375929</string>
    <string name="teachersComments"><![CDATA[ <b><font color=#2340e1>Teacher\'s Comments</b>]]> </string>
    <string-array name="Class">
        <item>Age (2-3) yrs</item>
        <item>Age (3-4) yrs</item>
        <item>Age (4-5) yrs</item>
        <item>Class-1</item>
        <item>Class-2</item>
        <item>Class-3</item>
        <item>Class-4</item>
        <item>Class-5</item>
        <item>Class-6</item>
        <item>Class-7</item>
        <item>Class-8</item>
        <item>Class-9</item>
        <item>Class-10</item>
        <item>Class-11 (Arts)</item>
        <item>Class-11 (Commerce)</item>
        <item>Class-11 (Science)</item>
        <item>Class-12 (Arts)</item>
        <item>Class-12 (Commerce)</item>
        <item>Class-12 (Science)</item>
    </string-array>
    <string-array name="ClassWithStream">
        <item>Age (0-1) yrs</item>
        <item>Age (1-2) yrs</item>
        <item>Age (2-3) yrs</item>
        <item>Age (3-4) yrs</item>
        <item>Age (4-5) yrs</item>
        <item>Class-1</item>
        <item>Class-2</item>
        <item>Class-3</item>
        <item>Class-4</item>
        <item>Class-5</item>
        <item>Class-6</item>
        <item>Class-7</item>
        <item>Class-8</item>
        <item>Class-9</item>
        <item>Class-10</item>
        <item>Class-11 (Arts)</item>
        <item>Class-11 (Commerce)</item>
        <item>Class-11 (Science)</item>
        <item>Class-12 (Arts)</item>
        <item>Class-12 (Commerce)</item>
        <item>Class-12 (Science)</item>
    </string-array>
    <string-array name="Relation">
        <item>Choose A Relation</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Daughter</item>
        <item>Son</item>
        <item>Cousin</item>
        <item>Uncle</item>
        <item>Aunt</item>
    </string-array>
    <string-array name="hobbyGroup">
        <item>Indoor Games</item>
        <item>Outdoor Games</item>
        <item>Instruments</item>
        <item>Dance</item>
        <item>Music</item>
        <item>Singing</item>
    </string-array>
    <string-array name="Instruments">
        <item>Piano</item>
        <item>Guitar</item>
        <item>Drum</item>
        <item>Trumpet</item>
        <item>Tabla</item>
        <item>Harmonium</item>
    </string-array>
    <string-array name="IndoorGames">
        <item>Chess</item>
        <item>Table Tennis</item>
        <item>Snooker</item>
        <item>Squash</item>
        <item>Bowling</item>
        <item>Darts</item>
    </string-array>
    <string-array name="OutdoorGames">
        <item>Cricket</item>
        <item>Football</item>
        <item>Tennis</item>
        <item>BasketBall</item>
        <item>VolleyBall</item>
        <item>Frisbee</item>
        <item>Hockey</item>
        <item>Badminton</item>
        <item>Swimming</item>
        <item>Karate</item>
    </string-array>
    <string-array name="Dance">
        <item>Contemporary</item>
        <item>Classical</item>
        <item>Salsa</item>
    </string-array>
    <string-array name="Music">
        <item>POP</item>
        <item>Jazz</item>
        <item>Classical</item>
        <item>Bollywood</item>
    </string-array>
    <string-array name="singing">
        <item>Singing</item>
    </string-array>
    <string name="feedback">Kindly mail in your queries/ feedback/ suggestions to  <u> contact@cognichamp.com </u>\nOur representative will get in touch with you within 2 working days.\n
        </string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Subject_name"><u><b>Subject Name\n</b></u></string>
    <string name="Subject_marks"><u><b>Subject Marks\n</b></u></string>
    <string name="classnum">Class-</string>
    <string name="percentage">Percentage-</string>
    <string name="addHobby">You have Not added any Hobbies\n
                                <u>Click Here to Add</u>
    </string>
    <string name="addFamily">You have Not Added any family Members\n
        <u>Click Here to Add</u>
    </string>
    <string name="addSchool">
        School Details Not Available\n
        <u>Click Here to Add</u>
    </string>
    <string name="termsHeader">
        Privacy and Terms &amp; Conditions:
By registering for using the services of CogniChamp, you agree to CogniChamp’s Terms &amp; Conditions. You also agree to our Privacy Policy, which describes how we process your information, including these key points:
\n
        </string>
    <string name="terms1">
 When you set up a CogniChamp Account, we store information you give us like your name, email address, telephone number, education details, etc.\n
        </string>
    <string name="terms2">
When you use CogniChamp services to do things like share a video, rate or watch a video, we store the information you create.\n
</string>
    <string name="terms3">

        When you search for any video on CogniChamp, watch a video on YouTube, for example, we process information about that activity – including information like the video you watched, device IDs, IP addresses, cookie data, and location.\n
</string>
    <string name="terms4">
         We also process the kinds of information you provide on CogniChamp like your hobbies, Subjects, School Class, Age, Subject Marks, Family details, Residence Address, etc.\n
       </string>
    <string name="termsSubHeader">
        Why we process it\n\n
We process this data for the purposes of:\n
        </string>
    <string name="terms5">
 Help our services deliver more useful, customized content such as more relevant video tutorials, tests, etc;\n
</string>
    <string name="terms6">
        Improve the quality of our services and develop new ones;\n
        </string>
    <string name="terms7">
 Deliver personalized content, both on CogniChamp services and on sites and apps that partner with CogniChamp;\n
</string>
    <string name="terms8">
         Conduct analytics and measurement to understand how our services are used.\n
    </string>
    <string-array name="Stream">
        <item>Arts</item>
        <item>Commerce</item>
        <item>Science</item>
    </string-array>
    <string name="emsSize">
        14
    </string>
    <string name="website">
Visit us at\n
        <u> www.cognichamp.com</u></string>
    <string-array name="Subjects">
        <item>Arabic</item>
        <item>Assamese</item>
        <item>Automobile Technology</item>
        <item>Bahasa Melayu</item>
        <item>Banking  Insurance</item>
        <item>Beauty and Wellness</item>
        <item>Bengali</item>
        <item>Bhutia</item>
        <item>Biology</item>
        <item>Bodo</item>
        <item>Business Studies</item>
        <item>Carnatic Music (Melodic Instruments)</item>
        <item>Carnatic Music (Percussion Instruments)</item>
        <item>Carnatic Music (Vocal)</item>
        <item>Chemistry</item>
        <item>Computer Science</item>
        <item>Dynamics of Retailing</item>
        <item>Economics</item>
        <item>Elements of Book Keeping and Accountancy</item>
        <item>Elements of Business</item>
        <item>English</item>
        <item>English Communicative</item>
        <item>English Language and Literatur</item>
        <item>Environmental Studies</item>
        <item>e-Publishing and e-Office (English)</item>
        <item>e-Publishing and e-Office (Hindi)</item>
        <item>Food Production</item>
        <item>Foundation of Information Technology</item>
        <item>French</item>
        <item>Front Office Operations</item>
        <item>German</item>
        <item>Gujarati</item>
        <item>Gurung</item>
        <item>Healthcare (General Duty Assistant)</item>
        <item>Hindi</item>
        <item>Hindi Course - A</item>
        <item>Hindi Course - B</item>
        <item>Hindustani Music (Instruments Melodic)</item>
        <item>Hindustani Music (Percussion Instruments)</item>
        <item>Hindustani Music (Vocal)</item>
        <item>Home Science</item>
        <item>Information and Communication Technology (ICT)</item>
        <item>Information Technology</item>
        <item>Introduction t Tourism</item>
        <item>Introduction to Financial Market</item>
        <item>Introductory Agriculture</item>
        <item>Japanese</item>
        <item>Kannada </item>
        <item>Kashmiri </item>
        <item>Lepcha </item>
        <item>Limb </item>
        <item>Malayalam </item>
        <item>Manipuri </item>
        <item>Marathi </item>
        <item>Marketing and Sales </item>
        <item>Mathematics </item>
        <item>Mizo </item>
        <item>National Cadet Corps </item>
        <item>Nepali </item>
        <item>Odia </item>
        <item>Painting </item>
        <item>Persian </item>
        <item>Physical Education </item>
        <item>Physics </item>
        <item>Punjabi </item>
        <item>Rai </item>
        <item>Retailing </item>
        <item>Russian </item>
        <item>Sanskrit </item>
        <item>Science </item>
        <item>Security </item>
        <item>Sherpa </item>
        <item>Sindhi </item>
        <item>Social Science </item>
        <item>Spanish </item>
        <item>Tamang </item>
        <item>Tamil </item>
        <item>Tangkhul </item>
        <item>Telugu </item>
        <item>Telugu – Telangana </item>
        <item>Thai </item>
        <item>Tibetan </item>
        <item>Urdu </item>
        <item>Urdu Course – A </item>
        <item>Urdu Course – B</item>
    </string-array>
    <string-array name="states">
        <item>Choose a State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharastra</item>
        <item>Manipur</item>
        <item>Meghlaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telengana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttrakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="gradesTestType">
        <item>Monthly</item>
        <item>Quaterly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="testsBoard">
        <item>UnitTest-1</item>
        <item>UnitTest-2</item>
        <item>CycleTest-1</item>
        <item>CycleTest-2</item>
        <item>HalfYearly</item>
        <item>Pre-Board</item>
        <item>Board</item>
    </string-array>
</resources>